2001-07-24  Tambet Ingo  <tambet@ximian.com>

	* boot-conf.in (set): Removed some old cruft.

	* x.pl.in: we use strict from now on. Only for this file.
	Fixed damned bug that ruined $sections variable and crashed
	display tool.

2001-07-20  Arturo Espinosa Aldama  <arturo@ximian.com>

	* platform.pl.in (xst_platform_ensure_supported): Don't
	exit after listing the platforms.

	* general.pl.in (xst_merge_std_directives): Added standard
	"platform_set" directive.

	* platform.pl.in (xst_platform_ensure_supported): Send
	end of report before returning.
	(xst_platform_set): A directive handler that sets the
	currently selected platform.

2001-07-20  Hans Petter Jansson  <hpj@ximian.com>

	* replace.pl.in (xst_replace_alchemist_ensure_list_types): Implement.
	  (xst_replace_alchemist): Set required alchemist branch attributes.
	  (xst_replace_alchemist_print): Set required alchemist branch attributes.
	  (xst_replace_alchemist_print_option): Set required alchemist branch
	  attributes.

2001-07-20  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_model_save): Implement.

	* replace.pl.in (xst_replace_xml_pcdata): Use xst_xml_model_save ().
	  (xst_replace_xml_attribute): Ditto.
	  (xst_replace_xml_pcdata_with_type): Ditto.
	  (xst_replace_xml_attribute_with_type): Ditto.
	  (xst_replace_xml_alchemist_print_option): Ditto.

2001-07-19  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_scan_make_kid_array): Accept '.' in attribute values.
	  (xst_xml_model_ensure): Simplify slightly.

	* parse.pl.in (xst_xml_parse_alchemist_print_option): The variable naming
	  the XML node to get attribute from was wrong.

	* replace.pl.in (xst_xml_replace_alchemist_print_option): The variable
	  naming the XML node to set attribute on was wrong.

	* print.pl.in (xst_print_remove_printer_rh71): Implement empty shell for
	  now.
	  (xst_print_get_printer_parse_table): Additions and fixes.
	  (xst_print_get_printer_replace_table): Ditto.
